cats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cats
  template:
    metadata:
      labels:
        app: cats
    spec:
      containers:
      - name: cats
        image: asia-northeast1-docker.pkg.dev/cicd-demo-394105/handson/cats:v1
        ports:
        - containerPort: 5000
