dogs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dogs
  template:
    metadata:
      labels:
        app: dogs
    spec:
      containers:
      - name: dogs
        image: asia-northeast1-docker.pkg.dev/cicd-demo-394105/handson/dogs:v1
        ports:
        - containerPort: 5000
