cats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-service
spec:
  type: ClusterIP
  selector:
    app: cats
  ports:
  - port: 80
    targetPort: 5000
