dogs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogs-service
spec:
  type: ClusterIP
  selector:
    app: dogs
  ports:
  - port: 80
    targetPort: 5000
