cats-and-dogs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cats-and-dogs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /cats
        pathType: Prefix
        backend:
          service:
            name: cats-service
            port:
              number: 80
      - path: /dogs
        pathType: Prefix
        backend:
          service:
            name: dogs-service
            port:
              number: 80
