hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /dark
        pathType: Prefix
        backend:
          service:
            name: dark-service
            port: 80
      - path: /light
        pathType: Prefix
        backend:
          service:
            name: light-service
            port: 80
